# ChangeLog for app-emacs/graphviz-dot-mode
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/graphviz-dot-mode/ChangeLog,v 1.5 2007/02/06 13:30:56 flameeyes Exp $

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  24 Oct 2005; Joseph Jezak <josejx@gentoo.org>
  graphviz-dot-mode-0.2.ebuild:
  Marked ~ppc.

*graphviz-dot-mode-0.2 (20 Sep 2003)

  20 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  Initial import.