@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50graphviz-dot-mode-gentoo.el 90 RMD160 ca6b5e1951fea52f6f11e11bf95276b4cbe1f0f2 SHA1 ad44f7e872102639753fb88f92c146d586491d78 SHA256 92753708dc05a3fb769179a7dc94f2354bcb968e7b6e835108e52fdf852b319b
 DIST graphviz-dot-mode-0.2.tar.gz 7453 RMD160 993b04a65494224c4b81974391af8cdaeb63c832 SHA1 c724d3853382aea56a9be63ada3ba0472b2d9bc5 SHA256 14f48d40d9f9bd9087276b814e61572958ec2e87472bdee85d32f7182951ca58
+DIST graphviz-dot-mode-0.3.4.el.bz2 11005 RMD160 6c203ed7e8483314389939295efdc6fe21f1f272 SHA1 f4c74dd22a167d5629227eb605bebd12403ac2b7 SHA256 06d9bd257be3c3d97d2581c0c9a7ec975b8da7d10bef39dee734ff0fc27c694f
 EBUILD graphviz-dot-mode-0.2.ebuild 557 RMD160 c511175759fb41ce814a4972a30308defa0eb159 SHA1 e94906615cdce7dbe2181231458be95cf6a24875 SHA256 f0915df41ea2d3cadd1a883abc5c084d4fd71f111a1072c766d5a615eeab0ebc
-MISC ChangeLog 543 RMD160 baef2f043617de1d6e6d312b9d1a87cf5588c52a SHA1 40cd5d7011274d6f57b98a9b8c9201b6978eb8e6 SHA256 76905fe7b8838412370052b0f13cec4bec1e72c6280beb4c046dc29c5c8f48c1
+EBUILD graphviz-dot-mode-0.3.4.ebuild 571 RMD160 4ab3ec3c7db9a23f45109a3da9c977d88bc39ead SHA1 b64ef4188e37829481853aec8c6fa64d8cd11a8d SHA256 fd61fd659666c3e069969e7271036708975e1fe955811daecfb1e6269a6c33af
+MISC ChangeLog 773 RMD160 f2503313890577404df13b15f1eab65f93bcbbd0 SHA1 26e91a7be1b0f1a7a83c9c02d595173a869326dc SHA256 1c5a770dec1e294de4abbc6dcc25975a941db48adc1293dba5c1e4d3fbb2ef72
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkN1bQACgkQNQqtfCuFneOlXgCeMMQi+0fOdukpY4GzN+ZUwAs5
+XuwAmQFU9NpAUbE6r+MRH7u5DWe6Bubi
+=RVwf
+-----END PGP SIGNATURE-----
